Change: se modifica id

--- a/src/views/_product_details.html
+++ b/src/views/_product_details.html
@@ -304,7 +304,7 @@
             {% if product.estado !== 'A' and estaAuth === true%}
             <div class="col p-3 d-flex justify-content-end">
                 <form>
-                    <button type="button" class="btn btn-success" id="formPayment" style="background-color: #9FBCCB; color: #000000; border: none;">
+                    <button type="button" class="btn btn-success" id="openRentalForm" style="background-color: #9FBCCB; color: #000000; border: none;">
                         Alquilar Producto
                     </button>
                 </form>
